Task5/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: non-admin-api-allow
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: back-end-api
      to:
        - podSelector:
            matchLabels:
              role: front-end

    - from:
        - podSelector:
            matchLabels:
              role: front-end
      to:
        - podSelector:
            matchLabels:
              role: back-end-api

    - from:
        - podSelector:
            matchLabels:
              role: admin-back-end-api
      to:
        - podSelector:
            matchLabels:
              role: admin-front-end

    - from:
        - podSelector:
            matchLabels:
              role: admin-front-end
      to:
        - podSelector:
            matchLabels:
              role: admin-back-end-api

  egress:
    - from:
        - podSelector:
            matchLabels:
              role: front-end
      to:
        - podSelector:
            matchLabels:
              role: back-end-api

    - from:
        - podSelector:
            matchLabels:
              role: back-end-api
      to:
        - podSelector:
            matchLabels:
              role: front-end

    - from:
        - podSelector:
            matchLabels:
              role: admin-front-end
      to:
        - podSelector:
            matchLabels:
              role: admin-back-end-api

    - from:
        - podSelector:
            matchLabels:
              role: admin-back-end-api
      to:
        - podSelector:
            matchLabels:
              role: admin-front-end
